==> etn-electrical/JIVE_Client_Code/Babelfish/Babelfish/Code/uC/ESP32D0WD/uC_Flash.cpp <==
#include "uC_Flash.h"
#include "Breaker.h"

NV_Ctrl::nv_status_t uC_Flash::Read( uint8_t* data, uint32_t address, uint32_t length, cback_func_t cback,
									 cback_param_t param )
{
	NV_Ctrl::nv_status_t return_status = NV_Ctrl::BUSY_ERROR;

	/* Check asynchronous write/read/erase service handler is free or busy */
	if ( m_semaphore == NV_Ctrl::RELEASE )
	{
		/* Check address range */
		if ( Check_Range( address, length ) && ( length != 0U ) )
		{
			m_semaphore = NV_Ctrl::ACQUIRE;
			m_asynch_data.data = const_cast<uint8_t*>( data );
			m_asynch_data.address = address;
			m_asynch_data.length = length;
			m_asynch_data.cback = cback;
			m_asynch_data.param = param;
			m_wait_time = Read_Time( const_cast<uint8_t*>( data ), address, length );
			m_state = NV_Ctrl::READ;
			return_status = NV_Ctrl::PENDING_CALL_BACK;
			m_cr_task->Resume();
		}
		else
		{
			return_status = NV_Ctrl::INVALID_ADDRESS;
		}
	}
	else
	{
		return_status = NV_Ctrl::BUSY_ERROR;
	}

	return ( return_status );
}

NV_Ctrl::nv_status_t uC_Flash::Erase( uint32_t address, uint32_t length, cback_func_t cback, cback_param_t param )
{
	NV_Ctrl::nv_status_t return_status = NV_Ctrl::BUSY_ERROR;

	/* Check asynchronous write/read/erase service handler is free or busy */
	if ( m_semaphore == NV_Ctrl::RELEASE )
	{
		/* Check address range */
		if ( Check_Range( address, length ) && ( length != 0U ) )
		{
			m_semaphore = NV_Ctrl::ACQUIRE;
			m_asynch_data.data = nullptr;
			m_asynch_data.address = address;
			m_asynch_data.length = length;
			m_asynch_data.cback = cback;
			m_asynch_data.param = param;
			m_state = NV_Ctrl::ERASE;
			m_wait_time = Erase_Time( address, length );
			return_status = NV_Ctrl::PENDING_CALL_BACK;
			m_cr_task->Resume();
		}
		else
		{
			return_status = NV_Ctrl::INVALID_ADDRESS;
		}
	}
	else
	{
		return_status = NV_Ctrl::BUSY_ERROR;
	}

	return ( return_status );
}

NV_Ctrl::nv_status_t uC_Flash::Read( uint8_t* data, uint32_t address, NV_CTRL_LENGTH_TD length,
									 bool use_protection )
{
	nv_status_t status = INVALID_ADDRESS;

	if ( Check_Range( address, length ) && ( length != 0U ) )
	{
		status = Read_Now( data, address, length );
	}

	return ( status );
}

NV_Ctrl::nv_status_t uC_Flash::Erase( uint32_t address, NV_CTRL_LENGTH_TD length, uint8_t erase_data,
									  bool protected_data )
{
	nv_status_t status = INVALID_ADDRESS;

	if ( Check_Range( address, length ) && ( length != 0U ) )
	{
		status = Erase_Now( address, length );
	}

	return ( status );
}

bool uC_Flash::Erase_Page( uint32_t address )
{
	bool ret = true;
	esp_err_t status = ESP_OK;

	status = spi_flash_erase_range( address * PAGE_SIZE, PAGE_SIZE );

	if ( status != ESP_OK )
	{
		ret = false;
	}
	else
	{
		ret = true;
	}

	return ( ret );
}

void uC_Flash::Unlock_Flash( void )
{
	if ( s_flash_guard_ops && s_flash_guard_ops->op_unlock )
	{
		s_flash_guard_ops->op_unlock();
	}
}

uint32_t uC_Flash::Read_Time( uint8_t* data, NV_CTRL_ADDRESS_TD address, NV_CTRL_LENGTH_TD length ) const
{
	uint32_t total_sector_num = ( length / SECTOR_SIZE ) + ( ( ( length % SECTOR_SIZE ) == 0 ) ? 0 : 1 );
	uint32_t read_time = total_sector_num * SECTOR_READ_TIME_BASELINE_MS;

	return ( read_time );
}

uint32_t uC_Flash::Write_Time( uint8_t* data, NV_CTRL_ADDRESS_TD address, NV_CTRL_LENGTH_TD length,
							   bool include_erase_time ) const
{
	uint32_t total_sector_num = ( length / SECTOR_SIZE ) + ( ( ( length % SECTOR_SIZE ) == 0 ) ? 0 : 1 );
	uint32_t write_time = total_sector_num * SECTOR_WRITE_TIME_BASELINE_MS;

	return ( write_time );
}

NV_Ctrl::nv_status_t uC_Flash::Write_Now( uint8_t* data, uint32_t address, NV_CTRL_LENGTH_TD length )
{
	NV_Ctrl::nv_status_t result = NV_Ctrl::SUCCESS;
	esp_err_t ret;
    //Ahmed
    if (DeviceInfo.OTA_State >= OTA_START)
    {
        DeviceInfo.OTA_State = OTA_MEM_WRITE;
    }
    if (DeviceInfo.DeviceInFactoryMode != DEVICE_IS_IN_FACTORY_MODE)
    {
        ets_printf("Write Address 0x%x  Size %d\n", address, length);    
    }
	ret = spi_flash_write( address, data, length );

	if ( ret != ESP_OK )
	{
		result = Interpret_SPI_Flash_Error( ret );
	}

	return ( result );
}

NV_Ctrl::nv_status_t uC_Flash::Read_Now( uint8_t* data, NV_CTRL_ADDRESS_TD address, NV_CTRL_LENGTH_TD length )
{
	NV_Ctrl::nv_status_t result = NV_Ctrl::SUCCESS;
	esp_err_t ret;

	ret = spi_flash_read( address, data, length );

	if ( ret != ESP_OK )
	{
		result = Interpret_SPI_Flash_Error( ret );
	}

	return ( result );
}

void uC_Flash::asynch_erase_handler( void )
{
	NV_Ctrl::nv_status_t erase_status = NV_Ctrl::SUCCESS;
	NV_CTRL_LENGTH_TD length = 0U;

	if ( m_semaphore == NV_Ctrl::ACQUIRE )
	{
		length = ( m_asynch_data.length > SECTOR_SIZE ) ? SECTOR_SIZE : m_asynch_data.length;

		erase_status = Erase_Now( m_asynch_data.address, length );
		if ( erase_status != NV_Ctrl::SUCCESS )
		{
			m_state = NV_Ctrl::ERROR;
			m_status = erase_status;
			uC_Flash::m_semaphore = NV_Ctrl::RELEASE;
		}
		else
		{
			m_asynch_data.address += length;
			m_asynch_data.length -= length;
			if ( m_asynch_data.length == 0 )
			{
				m_state = NV_Ctrl::COMPLETE;
				m_status = NV_Ctrl::SUCCESS;
				m_semaphore = NV_Ctrl::RELEASE;
			}
		}
	}
}

void uC_Flash::asynch_write_handler( void )
{
	NV_Ctrl::nv_status_t write_status = NV_Ctrl::SUCCESS;
	NV_CTRL_LENGTH_TD length = 0U;

	if ( m_semaphore == NV_Ctrl::ACQUIRE )
	{
		length = ( m_asynch_data.length > PAGE_SIZE ) ? PAGE_SIZE : m_asynch_data.length;

		write_status = Write_Now( m_asynch_data.data, m_asynch_data.address, length );
		if ( write_status != NV_Ctrl::SUCCESS )
		{
			m_state = NV_Ctrl::ERROR;
			m_status = write_status;
			uC_Flash::m_semaphore = NV_Ctrl::RELEASE;
		}
		else
		{
			m_asynch_data.data += length;
			m_asynch_data.address += length;
			m_asynch_data.length -= length;
			if ( m_asynch_data.length == 0 )
			{
				m_state = NV_Ctrl::COMPLETE;
				m_status = NV_Ctrl::SUCCESS;
				m_semaphore = NV_Ctrl::RELEASE;
			}
		}
	}
}

void uC_Flash::asynch_read_handler( void )
{
	NV_Ctrl::nv_status_t read_status = NV_Ctrl::SUCCESS;
	NV_CTRL_LENGTH_TD length = 0U;

	if ( m_semaphore == NV_Ctrl::ACQUIRE )
	{
		length = ( m_asynch_data.length > PAGE_SIZE ) ? PAGE_SIZE : m_asynch_data.length;

		read_status = Read_Now( m_asynch_data.data, m_asynch_data.address, length );
		if ( read_status != NV_Ctrl::SUCCESS )
		{
			m_state = NV_Ctrl::ERROR;
			m_status = read_status;
			uC_Flash::m_semaphore = NV_Ctrl::RELEASE;
		}
		else
		{
			m_asynch_data.data += length;
			m_asynch_data.address += length;
			m_asynch_data.length -= length;
			if ( m_asynch_data.length == 0 )
			{
				m_state = NV_Ctrl::COMPLETE;
				m_status = NV_Ctrl::SUCCESS;
				m_semaphore = NV_Ctrl::RELEASE;
			}
		}
	}
}
